# mc-launcher-win98

./: .gitignore  Cargo.toml  README.md
src/: app_init.rs  downloader.rs  get_versions.rs  gui.rs  java_finder.rs  launcher.rs  launcher_ui.rs  main.rs  models.rs  profiles.rs  version_manager.rs  window_manager.rs  windows.rs
themes/windows98/: main.py
