[package]
name = "minecraft_launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
fltk = "^1.5"
fltk-sys = "1.5.6"
gag = "1.0.0"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking","json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
winapi = { version = "0.3.9", features = ["winuser"] }
zip = "2.6.1"
