[package]
name = "minecraft_launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
fltk = { version = "^1.5", default-features = false }
rayon = "1.10.0"
regex = { version = "1.11.1", default-features = false, features = ["std", "unicode", "perf"] }
reqwest = { version = "0.12.15", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false }
winapi = { version = "0.3.9", features = ["winuser"], default-features = false }
zip = { version = "2.6.1", features = ["deflate", "bzip2"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1